z-index fix and 1password "fix"

--- a/src/assets/css/partials/components/menu.scss
+++ b/src/assets/css/partials/components/menu.scss
@@ -9,7 +9,7 @@
     box-shadow: var(--box-shadow-level-2);
     border-radius: var(--size-3xs);
     padding: var(--size-3xs);
-    z-index: 2;
+    z-index: 1;
 
     & .menu__item-list {
         list-style-type: none;
