--- a/src/assets/css/partials/components/multi-select.scss
+++ b/src/assets/css/partials/components/multi-select.scss
@@ -123,7 +123,7 @@
         padding: 0;
         -webkit-user-select: none;
         user-select: none;
-        z-index: 2;
+        z-index: 1;
     }
 
     &__optgroup {
